# redditrss

./: .gitignore  Cargo.toml
src/: authorization.rs  front.rs  logging.rs  main.rs
src/reddit/: auth.rs  client.rs  mod.rs
src/reddit/snapshots/: redditrss__reddit__client__tests__deserialize_test.snap
src/reddit/tests/: result.json
src/rss/: feed.rs
