[package]
name = "redditrss"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
atom_syndication = "0.12.1"
axum = "0.6.18"
eyre = "0.6.8"
futures = "0.3.28"
hyper = "0.14.26"
itertools = "0.11.0"
lazy_static = "1.4.0"
moka = { version = "0.12.1", features = ["future", "log"] }
regex = "1.8.3"
reqwest = "0.11.18"
serde = "1.0.163"
shuttle-axum = "0.31.0"
shuttle-runtime = "0.31.0"
tokio = "1.28.1"
tracing = "0.1.37"
