[package]
name = "redditrss"
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
atom_syndication = "0.12.1"
axum = "0.7.4"
color-eyre = "0.6.2"
colored = "2.1.0"
eyre = "0.6.8"
futures = "0.3.28"
hyper = "1.0.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
moka = { version = "0.12.1", features = ["future", "log"] }
once_cell = "1.19.0"
regex = "1.8.3"
reqwest = "0.11.18"
serde = "1.0.163"
shuttle-axum = "0.42.0"
shuttle-runtime = { version = "0.42.0", default-features = false }
tokio = "1.28.1"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3.18", features= ["env-filter"]}
