[package]
name = "redditrss"
version = "0.5.0"
edition = "2024"
publish = false

[dependencies]
atom_syndication = "0.12.1"
axum = "0.8.1"
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.28"
itertools = "0.14.0"
moka = { version = "0.12.1", features = ["future", "log"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde = "1.0.163"
serde_json = "1.0.115"
shuttle-axum = "0.51.0"
shuttle-runtime = { version = "0.51.0", default-features = false }
tokio = "1.28.1"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
insta = "1.38.0"
